--- a/templates/usr_val/acc_active_email.html
+++ b/templates/usr_val/acc_active_email.html
@@ -1,10 +1,10 @@
 {% autoescape off %}
-Hi {{ first_name }},
-Please click on the link to confirm your email address,
-http://{{ domain }}{% url 'usr_val:activate' uidb64=uid token=token %}
+    Hi {{ first_name }},
+    Thanks for signing up. We are excited to have you get started!
+    Please click on the link below to confirm your email address and dive right in to select the project perfect for
+    you:
+    http://{{ domain }}{% url 'usr_val:activate' uidb64=uid token=token %}
 
-On clicking this link you will be asked to make a profile.
-If you don't create a profile then you can't post  or view others' profiles.
 
-If you did not initialise this action,then please DO NOT CLICK on this link.
+    WARNING: If you did not initialise this action, then please DO NOT CLICK on the link.
 {% endautoescape %}
